Fix navbar button text spacing

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -116,5 +116,5 @@
 
 .navbar-button-text {
   display: block;
-  margin: 5%;
+  margin: 0.5em;
 }
